# 100day-challenge-rust

./: .gitignore  Cargo.toml
day1/: Cargo.toml
day1/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
src/: main.rs
src/controllers/: default.rs  mod.rs  task.rs
src/databases/: mod.rs
src/dtos/: mod.rs
